activated save of test images

--- a/CarND-LaneLines-P1/P1_sdc.ipynb
+++ b/CarND-LaneLines-P1/P1_sdc.ipynb
@@ -47,7 +47,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -63,7 +64,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -102,7 +104,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -222,7 +225,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -247,11 +251,11 @@
     "#threshold is mean + 1.5 std\n",
     "  thresholds = meancolors+sdevcolors*1.5 \n",
     "#to pass yellow blue threshold must be much lower\n",
-    "  filtered_image = color_select(image,thresholds[0],thresholds[1],thresholds[2]*0.3)\n",
+    "  filtered_image = color_select(image,thresholds[0],thresholds[1]*0.95,thresholds[2]*0.25)\n",
     "  return filtered_image\n",
     "\n",
     "#filter and average lines, add slope and offset\n",
-    "def averageLines(lines,delta_m, delta_d):\n",
+    "def averageLines(lines,max_delta_m, max_delta_b, max_delta_dist):\n",
     "  av1_lines=[]\n",
     "  av2_lines=[]\n",
     "  for i in range(lines.shape[0]):\n",
@@ -287,15 +291,18 @@
     "      (m2,b2,x21,y21,x22,y22) = av1_lines[j]\n",
     "      if x21 == 0 and x22 == 0:\n",
     "        continue\n",
+    "        \n",
+    "# distance between begin point and and point of two lines  \n",
+    "      dist = (x21 - x12)*(x21 - x12) + (y21 - y12)*(y21 - y12)\n",
     "            \n",
     "# apply average conditions\n",
-    "      if (abs(math.atan(m1) - math.atan(m2)) > delta_m) and (abs(b1 - b2) > delta_d):\n",
+    "      if (abs(math.atan(m1) - math.atan(m2)) > max_delta_m) or (abs(b1 - b2) > max_delta_b) or dist > max_delta_dist:\n",
     "        continue\n",
     "        \n",
     "      av_lines.append((m2,b2,x21,y21,x22,y22))  \n",
     "# mark the line not to be used again  \n",
     "      av1_lines[j] = (0,0,0,0,0,0)\n",
-    "        \n",
+    "\n",
     "    if len(av_lines) > 1:\n",
     "#mean for slope and offset\n",
     "      av = np.mean(av_lines,axis=0)       \n",
@@ -337,14 +344,15 @@
     "      if x21 == 0 and x22 == 0:\n",
     "        continue\n",
     "# apply average conditions\n",
-    "      if (abs(math.atan(m1) - math.atan(m2)) > delta_m) and (abs(b1 - b2) > delta_d):\n",
+    "      if (abs(math.atan(m1) - math.atan(m2)) > delta_m) or (abs(b1 - b2) > delta_d):\n",
     "        continue\n",
     "        \n",
     "      av_lines.append((m2,b2,x21,y21,x22,y22))  \n",
     "# mark the line to to be used again  \n",
     "      lines[j] = (0,0,0,0,0,0)\n",
-    "        \n",
-    "    if len(av_lines) > 1:\n",
+    "\n",
+    "#accept only lines that have more then one segment    \n",
+    "    if len(av_lines) >= 2:\n",
     "#mean for slope and offset\n",
     "      av = np.mean(av_lines,axis=0)       \n",
     "#min y for end of lane coordinate, \n",
@@ -366,8 +374,8 @@
     "       \n",
     "      av_line = (m,b,int(x0),int(y0),int(x1),int(y1))\n",
     "      av2_lines.append(av_line)\n",
-    "    else:\n",
-    "      av2_lines.append(av_lines[0])    \n",
+    "#    else:\n",
+    "#      av2_lines.append(av_lines[0])    \n",
     "    \n",
     "  return av2_lines\n",
     "\n",
@@ -400,9 +408,13 @@
     "  ls = sorted(ext_lines,key=itemgetter(2))\n",
     "    \n",
     "  for line in ls:\n",
-    "    if line[0] < 0 and left_line == None:\n",
+    "    (m,b,x1,y1,x2,y2) = line\n",
+    "    #left start in the left half and end close to the middle\n",
+    "    if m < 0 and x1 < maxx*0.5 and x2 < maxx*0.6 and left_line == None:\n",
     "      left_line = line\n",
-    "    if line[0] > 0:\n",
+    "    \n",
+    "    #right starts in the right half and end close to the middle\n",
+    "    if m > 0 and x1 > maxx*0.5 and x2 > maxx*0.4:\n",
     "      right_line = line\n",
     "      break\n",
     "  \n",
@@ -421,12 +433,14 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "import os\n",
     "print(os.listdir(\"test_images/\"))\n",
+    "\n",
+    "last_lines = None\n",
     "\n",
     "#the process chain to draw lane lines on the road\n",
     "def process_colored_image(image):\n",
@@ -457,44 +471,62 @@
     "  max_line_gap = 80\n",
     "\n",
     "# define parameters for avering. max difference in slope and offest intwo steps\n",
-    "  delta_m1 = 0.02\n",
+    "  delta_m1 = 0.01\n",
     "  delta_b1 = 8\n",
+    "  delta_dist = 15000\n",
     "  delta_m2 = 0.2\n",
     "  delta_b2 = 20\n",
     "\n",
     "# Run Hough on edge detected image, if nothing is detected reduce line length\n",
+    "  lines_img = np.zeros((*edges.shape, 3), dtype=np.uint8)\n",
     "  lines = cv2.HoughLinesP(edges, rho, theta, threshold, np.array([]), minLineLength=min_line_length, maxLineGap=max_line_gap)\n",
     "  factor = 1\n",
     "  while lines == None:\n",
     "    factor *= 0.9\n",
     "    lines = cv2.HoughLinesP(edges, rho, theta, threshold, np.array([]), minLineLength=min_line_length*factor, maxLineGap=max_line_gap)\n",
     "\n",
-    "#tw step avering of lines    \n",
-    "  lines = averageLines(lines,delta_m1,delta_b1)\n",
-    "  if len(lines) > 2:\n",
-    "    lines = averageLines2(lines,delta_m2,delta_b2)\n",
+    "    if factor < 0.5:\n",
+    "      break\n",
+    "\n",
+    "#first step avering of lines    \n",
+    "  if lines != None:\n",
+    "    lines = averageLines(lines,delta_m1,delta_b1, delta_dist)\n",
+    "    \n",
+    "#second step avering of lines    \n",
+    "    if len(lines) > 2:\n",
+    "      lines = averageLines2(lines,delta_m2,delta_b2)\n",
     "\n",
     "#extend lines and select a left and a right line\n",
-    "  lines_img = np.zeros((*edges.shape, 3), dtype=np.uint8)\n",
-    "  lines = extendLines(lines,lines_img.shape[0], lines_img.shape[1])\n",
+    "    lines = extendLines(lines,lines_img.shape[0], lines_img.shape[1])\n",
     "\n",
+    "#no lines found, use the last found\n",
+    "  if lines == None and last_lines != None:\n",
+    "    lines = last_lines\n",
+    "    \n",
     "#paint lines on a blank image\n",
     "  for line in lines:\n",
     "    (m,b,x1,y1,x2,y2) = line\n",
     "    cv2.line(lines_img, (x1,y1), (x2,y2), [255,0,0], 15)\n",
+    "\n",
+    "#keep the last lines\n",
+    "  last_lines = lines\n",
     "\n",
     "#merge the lines on teh orig image\n",
     "  result = weighted_img(lines_img, image)\n",
     "  return result\n",
     "\n",
     "#loop ove rthe test pictures\n",
+    "resultPath = \"result_images/\"\n",
+    "if not os.path.exists(resultPath):\n",
+    "  os.mkdir(resultPath)\n",
+    "\n",
     "for item in os.listdir(\"test_images/\"):\n",
     "  #Read in and grayscale the image\n",
     "  print(item)\n",
     "  path_to_image = os.path.join(\"test_images\",item)\n",
     "  image = mpimg.imread(path_to_image)\n",
     "  result = process_colored_image(image)\n",
-    "  path_to_result = os.path.join(\"test_images\",\"result_{0}\".format(item))\n",
+    "  path_to_result = os.path.join(resultPath,\"result_{0}\".format(item))\n",
     "  fig = plt.gcf()\n",
     "  plt.imshow(result)\n",
     "  fig.savefig(path_to_result) \n",
@@ -528,7 +560,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -541,7 +574,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -566,7 +600,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -588,7 +622,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -618,7 +652,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -634,7 +668,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -722,7 +756,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -736,7 +770,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -751,7 +786,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": []
@@ -760,7 +796,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": []
